--- a/public/app/index.html
+++ b/public/app/index.html
@@ -19,7 +19,8 @@
 </head>
 
 <body>
-    <div class="flex flex-col w-full max-w-full min-h-screen bg-neutral-50 justify-center items-center">
+    <div hx-get="/api/app" hx-trigger="load"
+        class="flex flex-col w-full max-w-full min-h-screen bg-neutral-50 justify-center items-center">
         <div class="w-16 h-16 border-8 border-t-transparent border-solid rounded-full animate-spin border-gray-900">
         </div>
     </div>
