--- a/public/app3/index.html
+++ b/public/app3/index.html
@@ -12,17 +12,18 @@
     </style>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://unpkg.com/alpinejs@3.13.5" defer></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.lime.min.css" />
-    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>
         caipi.ai - Dashboard
     </title>
 </head>
 
 <body>
-    <main hx-get="/api/app" hx-trigger="load" hx-swap="outerHTML">
-        <div aria-busy="true"></div>
-    </main>
+    <div hx-get="/api/app" hx-trigger="load"
+        class="flex flex-col w-full max-w-full min-h-screen bg-neutral-50 justify-center items-center">
+        <div class="w-16 h-16 border-8 border-t-transparent border-solid rounded-full animate-spin border-gray-900">
+        </div>
+    </div>
 </body>
 
 </html>
