--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <li><a href="#">Features</a></li>
             <li><a href="#">Demo</a></li>
             <li><a href="#">Pricing</a></li>
-            <li><a href="/login">Sign In</a></li>
+            <li><a href="/app">Sign In</a></li>
         </ul>
     </nav>
 
