new static pages

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -3,11 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
-    <script src="https://unpkg.com/alpinejs@3.13.5" defer></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.lime.min.css" />
+    <script src="../script/htmx.1.9.11.min.js"></script>
+    <link rel="stylesheet" href="../css/pico.2.0.6.lime.min.css" />
     <link rel="stylesheet" href="../css/style.css">
     <title>
         caipi.ai - Dashboard
