--- a/public/login/index.html
+++ b/public/login/index.html
@@ -3,48 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        [x-cloak] {
-            display: none
-        }
-    </style>
-    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
-    <script src="https://unpkg.com/alpinejs@3.13.5" defer></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>
-        caipi.ai - Login
-    </title>
+    <title>caipi.ai - Create, Monitor, and Test AIPIs</title>
+    <link rel="stylesheet" href="/css/pico.2.0.6.lime.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/script/htmx.1.9.11.min.js"></script>
 </head>
 
 <body>
 
-
-    <div class="flex flex-col h-screen bg-[url('/static/bg.svg')] bg-cover">
-        <div class="flex h-screen w-screen justify-evenly items-center">
-            <div>
-                <img src="/static/caipi.svg" class="w-32" alt="caipi.ai logo">
-            </div>
-            <div>
-                <a href="/login/github">
-                    <button
-                        class="inline-flex items-center justify-center px-4 py-2 text-sm font-medium tracking-wide text-white transition-colors duration-200 rounded-md bg-neutral-950 hover:bg-neutral-900 focus:ring-2 focus:ring-offset-2 focus:ring-neutral-900 focus:shadow-outline focus:outline-none">
-                        <img class="w-5 mr-2" src="/static/github.svg" />
-                        Login with GitHub
-                    </button>
-                </a>
-            </div>
+    <main class="container">
+        <div class="grid">
+            <div>caipi.ai</div>
+            <button class="contrast"></button>
         </div>
-        <div class="h-16 text-center text-sm">
-            By signing in you agree to our <a class="underline" href="/terms">
-                Terms of Service
-            </a>
-            and <a class="underline" href="/privacy"> Privacy Policy </a>
-        </div>
-    </div>
+    </main>
 
-
+    <footer class="container">
+        <p>By signing in you agree to our Terms of Service and Privacy Policy</p>
+    </footer>
 </body>
 
 </html>
