--- a/public/login/index.html
+++ b/public/login/index.html
@@ -5,21 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>caipi.ai - Create, Monitor, and Test AIPIs</title>
-    <link rel="stylesheet" href="/css/pico.2.0.6.lime.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/script/htmx.1.9.11.min.js"></script>
+    <link rel="stylesheet" href="../css/pico.2.0.6.lime.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../script/htmx.1.9.11.min.js"></script>
 </head>
 
-<body>
+<body style="background: url('../img/bg.svg')">
 
     <main class="container">
-        <div class="grid">
-            <div>caipi.ai</div>
-            <button class="contrast"></button>
+        <div class="grid" style="min-height: 87svh; display: flex; justify-content: space-around; align-items: center;">
+            <div>
+                <img src="../img/caipi.svg" alt="caipi.ai" style="width: 120px;">
+            </div>
+            <div>
+                <button class="contrast">Login wit GitHub</button>
+            </div>
         </div>
     </main>
 
-    <footer class="container">
+    <footer class="container" style="display: flex; justify-content: space-around;">
         <p>By signing in you agree to our Terms of Service and Privacy Policy</p>
     </footer>
 </body>
