--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <section id="hero">
             <h1>Create, Monitor, and Test AIPIs with Ease</h1>
             <p>Caipi.ai provides a breath of fresh air for developers who want to build single-purpose AI functionalities and integrate them into existing applications without delving into the world of conversational models and prompt engineering.</p>
-            <a href="#" class="button" role="button">Get Started</a>
+            <a href="/app" class="button" role="button">Get Started</a>
         </section>
 
         <section id="features">
