--- a/public/login/index.html
+++ b/public/login/index.html
@@ -18,7 +18,7 @@
                 <img src="../img/caipi.svg" alt="caipi.ai" style="width: 120px;">
             </div>
             <div>
-                <button class="contrast">Login wit GitHub</button>
+                <button class="contrast" href="/login/github">Login wit GitHub</button>
             </div>
         </div>
     </main>
