--- a/public/login/index.html
+++ b/public/login/index.html
@@ -10,7 +10,7 @@
     <script src="../script/htmx.1.9.11.min.js"></script>
 </head>
 
-<body style="background: url('../img/bg.svg')">
+<body>
 
     <main class="container">
         <div class="grid" style="min-height: 87svh; display: flex; justify-content: space-around; align-items: center;">
@@ -18,7 +18,7 @@
                 <img src="../img/caipi.svg" alt="caipi.ai" style="width: 120px;">
             </div>
             <div>
-                <button class="contrast" href="/login/github">Login wit GitHub</button>
+                <a href="/login/github"><button class="contrast">Login wit GitHub</button></a>
             </div>
         </div>
     </main>
