--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,18 @@
 </head>
 
 <body>
-    <nav class="container-fluid" style="box-shadow: var(--pico-box-shadow)">
-        <ul>
-            <li><a href="#"><strong>caipi.ai</strong></a></li>
-        </ul>
-        <ul>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Demo</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="/app">Sign In</a></li>
-        </ul>
-    </nav>
+    <header class="container-fluid" style="box-shadow: var(--pico-box-shadow);padding: 0 7px 0 7px">
+        <nav>
+            <ul>
+                <li><img src="/img/caipi.svg" style="width: 36px"></li>
+                <li><strong>caipi.ai</strong></li>
+            </ul>
+            <ul>
+                <li><a class="contrast" href="#">Features</a></li>
+                <li><a class="contrast" href="#">Pricing</a></li>
+                <li><a class="contrast" href="/app">Log In</a></li>
+            </ul>
+    </header>
 
     <main class="container">
         <section id="hero">
